check_output.txt
   Compiling HtopRust v1.0.0 (C:\Users\raver\source\repos\HtopRust)
warning: unused import: `ProcessStatus`
  --> src\main.rs:20:52
   |
20 | use sysinfo::{System, Networks, Disks, Users, Pid, ProcessStatus};
   |                                                    ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `BytesStart`
 --> src\events.rs:2:25
  |
2 | use quick_xml::events::{BytesStart, Event};
  |                         ^^^^^^^^^^

error[E0061]: this method takes 0 arguments but 1 argument was supplied
   --> src\events.rs:168:26
    |
168 |             match reader.read_event(&mut buf) {
    |                          ^^^^^^^^^^ -------- unexpected argument of type `&mut Vec<_>`
    |
note: method defined here
   --> C:\Users\raver\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\quick-xml-0.39.0\src\reader\slice_reader.rs:74:12
    |
 74 |     pub fn read_event(&mut self) -> Result<Event<'a>> {
    |            ^^^^^^^^^^
help: remove the extra argument
    |
168 -             match reader.read_event(&mut buf) {
168 +             match reader.read_event() {
    |

warning: variable does not need to be mutable
  --> src\events.rs:27:13
   |
27 |         let mut fetch_channel = |channel_name: &str| -> Vec<EventInfo> {
   |             ----^^^^^^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\main.rs:255:13
    |
255 |         let mut users = Users::new_with_refreshed_list();
    |             ----^^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src\main.rs:260:13
    |
260 |         let mut current_lang = if supports_utf8 { Language::En } else { Language::En }; // Only used for WiFi strings initially
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src\main.rs:425:9
    |
425 |     let mut last_tick = Instant::now();
    |         ----^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: unused variable: `last_tick`
   --> src\main.rs:425:9
    |
425 |     let mut last_tick = Instant::now();
    |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_last_tick`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0061`.
warning: `HtopRust` (bin "HtopRust") generated 7 warnings
error: could not compile `HtopRust` (bin "HtopRust") due to 1 previous error; 7 warnings emitted
